Blog özelleştirmeleri kaldırıldı.

--- a/database/M0001.md
+++ b/database/M0001.md
@@ -1,115 +1,13 @@
-# GİT Nedir?
-
-***En Büyük LİNUX...***
-
-Baştaki slogandan da anlayacağınız gibi özgürlüğüme önem verdiğimden dolayı anlatım ve kodlar ***Linux*** için olacaktır. Sizlerede tavsiyem bir an önce özgürlüğünüze sahip çıkın. Daha detaylı bilgi için ***Özgür Yazılım Nedir?***  başlıklı makalemi okumanızı tavsiye ederim.
-
-Her hangi bir programlama dili ile uğraşanların ortak sorunu; çalışmalarımız ilerlediğinde ***"Son kaydımız düzgün mü?", "Acaba en son bıraktığım durum, benim en iyi bıraktığım durum mu?", "Acaba yanlış bir şey yaptıysam, doğru olan konuma nasıl geri dönerim?"***
-
-"Her yiğidin yoğurt yiyişi farklıdır." atasözü de aklımıza geldiğinde, herkesin kendine göre kolay olan farklı yöntemler geliştirmiş olacağına da şüphe yoktur ki;
-    * Son hali taşınabilir diske kayıt etmek,
-    * Değişiklik yaptıkca ara ara kayıt etmek,
-    * Değişiklik yaptıkca ara ara dosya ismine tarih ve saat ekleyerek kayıt etmek gb.
-
-İşte GİT tam burada devreye girip sürüm/versiyon kontrolu yapmamıza, proje içerisinde istediğimiz zamana geri dönüp hatamızı düzeltmemize yada yeni bir şeyler eklememize olanak sağlıyor. Kısacası ***"GİT sürüm/versiyon kontrolu"*** dur.
+# ÖRNEK MAKALE 1
 
 
-### Başlangıç
+Lorem Ipsum Nedir?
 
-GİT ile çalışmaya başlamadan önce kendi bilgisayarımızdamı yoksa bize versiyon kontrolü olanağı veren sitelerde mi çalışacağız? Buna karar vermemiz gerekiyor. İkisinide bilmemiz gerekiyor. Çünkü bazı projelerde arkadaşlarımızla beraber eş zamanlı çalışmamız gerekebilir. Herkes kendi bilgisayarında aynı projeye çalışırsa, projenin nereleri bitmiş bilemeyiz. Belki de aynı yerde çalışıp boşa zaman kaybetmiş olmazmıyız?
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-### Kurulum
-Tabiki komutlar konsoldan çalıştırılacak!!!
-```bash
-$ apt-get install git
-$ apt-get update
-$ apt-get upgrade
-```
-
-### Projede Çoklu Çalışacaksak
-
-Bu işlem için SSH bağlantınızı yapmış olmanız gerekmektedir. SSH bağlantı ayarları için lütfen SSH Nedir? makalemi okuyunuz.
-
-Projeyi kendi bilgisayarımızda çalıştırabilmemiz için localhost klasörü altına indirmemiz gerekmektedir. Localhost klasörüne geçmek için konsola;
-```bash
-$ cd /var/www/html
-```
-Aşağıdaki komutları bu klasör altından göndememiz gerekmektedir.
-
-İş arkadaşlarımızda birlikte görev dağılımı yaparak çalışacaksak [bitbucket.org](https://bitbucket.org) veya [github.com](https://github.com/) gibi bize versiyon takibi imkanını sağlayan sitelerden birisine üye olmamız gerekmektedir.
-
-Projeyi [bitbucket.org](https://bitbucket.org)'a oluştup proje arkadaşlarımız ile paylaştıktan sonra, proje sayfasındaki CLONE sekmesinde yer alan SSH bağlantı linkini kopyalıyarak konsolda çalıştırıyoruz. Kopyalanan örnek kod aşağıdaki gibidir;
-```bash
-$ git clone git@bitbucket.org:grupAdi/projeAdi.git
-```
-Projeyi [github.com](https://github.com/)'a oluştup proje arkadaşlarımız ile paylaştıktan sonra, proje sayfasındaki yeşil renkli CLONE OR DOWNLOAD sekmesinde yer alan SSH bağlantı linkini kopyalıyarak konsolda çalıştırıyoruz. Kopyalanan örnek kod aşağıdaki gibidir;
-```bash
-$ git clone git@github.com:kullaniciAdi/projeAdi.git
-```
-Yukarıdaki
-
-### Projede Versiyon Kontrolü Başlatma
-
-Her proje için bir defa yapılır ve proje klasörünün altında yapmak zorunludur.
-```bash
-$ git init
-```
-Buraya kadar olan işlemleri doğru olarak yaptığımızı umuyorum. ***Şu andan itibaren versiyon kontrolu yapıyoruz.***
-
-### Versiyon Kontrolu TEST
-
-Proje klasörümüz altında bir adet "Deneme" klasörü oluşturalım;
-```bash
-$ mkdir Deneme
-```
-Projemizde yer alan index.html veya index.php dosyasının herhangi bir yerinde değişiklik yapalım.
-
-Bunları yaptıktan sonra /var/www/html/projemiz klasörünün altında;
-```bash
-$ git status
-```
-komutunu göndeririz. Konsol çıktısında eklenen ve değişiklik yapılan klasör ve dosyaların kırmızı renkte isimlerinin yazdığını görürüz. Eğer görebiliyorsak artık versiyon takibi için hiç bir sorunun olmadığını anlarız.
-
-### Versiyonlama
-
-Projemizde herhangi bir değişiklik yaptığımızda bunu aşağıdaki kod ile belirleyerek versiyonlamış oluruz. Bu işlemin sıklığı ve açıklama notu sizin her hangi bir sorunda geri dönmenizi kolaylaştıracaktır. Değişikliklerin hang aşamada yapıldığı konusunda bilgi sahibi olmanızı sağlayacaktır.  
-```bash
-$ git add .
-$ git commit -m "Açıklama buraya yazılacak."
-```
-
-### Ortak Kullanım Sitesine Gönderme
-
-Bilgisayarımızda yaptığımız değişikliği arkadaşlarımızın görmesini istiyorsak, versiyonlama sitesinde yer alan proje dosyalarını eşitlememiz gerekmektedir. Biz lokalimizde çalıştığımız için, yaptığımız her değişiklik sonrası biz ilerde versiyonlama sitesindeki projemiz geride kalır.
-```bash
-$ git push -u origin master
-```
-
-Peki proje ortağımız projede değişiklik yapıp, bitbucket/github gibi servis sağlayıcısına yaptığı değişiklikleri genderdi ise ne olur? Yani, bilgisayarımızdaki proje geride kalmış ise ne yapmak lazım!!!
-
-### Projemizi Sunucu İle Eşitlemek
-
-Bilgisayarımızdaki projede en ufak bir değişiklik bile varsa hata alırsınız. Bunları temizlemek için;
-
-```bash
-$ git reset --hard
-```
-
-Sunucudaki proje ile eşitlemek için şimdi;
-
-```bash
-$ git pull origin master
-```
-ve composer gerekli ise yukardaki komutun peşinden;
+Kod görünümü örneği;
 
 ```bash
 $ composer update
 ```
-
-yaparak sunucuda bulunan proje ile bilgisayarımızdaki projemizi bire bir eşitlemiş oluyoruz.
-
-<<<<<<< HEAD
-
-=======
->>>>>>> cabc4ca84f4ffa6c9a7280dea75dd89da471cf02
-::Hasan Çiçek|2018-08-28|Shell;Php
+::Yazar adı buraya yazılacak|2018-08-28|Shell;Php
