--- a/database/M0002.md
+++ b/database/M0002.md
@@ -1,10 +1,14 @@
-# Özgür Yazılım Nedir?
-
-Özgür yazılım, kullanıcısına çalıştırma, kopyalama, dağıtma, inceleme, değiştirme ve geliştirme özgürlükleri sınırsızca (pervasızca) tanıyan yazılım türüne denir.
-
-**Ne yani, Açık Kaynak Yazılım'da Özgür olmuyor mu? Sizce...**
+# ÖRNEK MAKALE 2
 
 
-Özgür yazılım, kullanıcısına çalıştırma, kopyalama, dağıtma, inceleme, değiştirme ve geliştirme özgürlükleri sınırsızca(pervasızca) tanıyan yazılım türüne denir.
+Lorem Ipsum Nedir?
 
-::Hasan Çiçek|2018-08-28|Genel
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Kod görünümü örneği;
+
+```bash
+$ composer update
+```
+
+::Yazar adı buraya yazılacak|2018-08-28|Genel
