--- a/database/M0004.md
+++ b/database/M0004.md
@@ -1,11 +1,14 @@
-# SSH Nedir?
+# ÖRNEK MAKALE 4
 
-## Nedir?
 
-Secure SHELL / Güvenli Kabuk
+Lorem Ipsum Nedir?
 
-TELNET ve RLOGİN gibi kullanıcılara sunucularını internet üzerinden kontrol etmesini ve düzenlemesini, hemde kendi bilgisayarında çalışıyormuşcasına sağlayan uzak yönetim protokolüdür. En önemlisi kullanıcı, SSH şifreleme tekniğini ile uzaktaki sunucuya giden ve gelen tüm iletişimlerin şifrelendiğinden emin olur. Burada gönderdiğimiz komutlardan emin olarak ve bir kaç defa kontrol ederek göndermemiz gerekmektedir.
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-SSH ile uzaktaki sunucunuza bağlanabilmeniz için önce kimlik kanıtlaması için kullanılan açık anahtarlı şifreyi girmeniz gerekmektedir. Eğer uygulama içerisinde kullanıcı adı ve şifreyi doğru girmeyi başarırsanız yönetim yetkisine sahip olursunuz ve program sunucunuzu yönetmek için bir DOS ekranı açar ve gireceğiniz komutlar doğrultusunda işlem yapar. SSH, TCP portlarında taşınır ve X11 ile bağlantı sağlar. Aynı zamanda SSH tüneli ile sunucularınıza güvenlik duvarı sayesinde sürekli olarak güvenli bir bağlantı yapmanızı sağlar.
+Kod görünümü örneği;
 
-::Hasan Çiçek|2018-08-28|Shell;Php
+```bash
+$ composer update
+```
+
+::Yazar adı buraya yazılacak|2018-08-28|Shell;Php
