--- a/database/M0006.md
+++ b/database/M0006.md
@@ -1,67 +1,14 @@
-# Erteleme (Procrastination) Hastalığı
-
-## Procrastinator Kimdir?
-
-Sanıldığının aksine procrastinatorler "tembel" insanlar değillerdir. Tam tersine azimli, çalışkan, çoğu zaman zeki ve aşırı mükemmelliyetçi insanlardır.
-
-Erteleme hastalığı tembellik değildir, bir türlü başlayamamaktır. Tembellikle karşılaştırılmasının sebebi her iki insan tipinin de gün sonunda bir şeyler üretemiyor olmasıdır.
-
-İki insan tipi arasındaki tek fark, procrastinatorlerin vicdan azabı çekmeleridir.
-
-### 1. Yüksek standartlarınız işinizin önünde bir engel olabilir.
-
-Mükemmeliyetçilik erteleme davranışının en önemli sebeplerinden biri olarak görülmektedir. Yani, bir işi tam anlamıyla, mükemmel bir şekilde, tamamlayamayacağınıza inanıyorsanız, işi yapmaktan sonuna kadar kaçıyorsunuz.
-
-Mükemmeliyetçi kişiler, genellikle alışık olmadığı bir işi yapması gerektiğinde erteleme davranışı sergilemeye başlamakta. Kusursuzu arıyorsanız ve yapılması gereken iş hakkında, nasıl bir yol izleyeceğiniz konusunda herhangi bir fikriniz yoksa erteleme davranışına bir merhaba diyebilirsiniz.
-
-Ancak size kötü bir haber: Mükemmel diye bir şey yoktur. Sizin için kusursuz olan bir iş, diğerleri için eksik kalabilir. Herkesin ideali birbirinden farklıdır. Bu nedenle, elinizden gelenin en iyisini yapın ve sonuç ne olursa olsun mutlu olun.
-
-### 2. Eğer bir işi yapmaya kalkışmazsanız, asla başarısız olmazsınız.
-
-Erteleme davranışınızın altında yatan sebep başarısızlık korkusu olabilir. Bazı durumlarda, egonuz koruyucu bir mekanizma olarak erteleme davranışını devreye sokar. Yani, bir işi yapmaya kalkışmadığınızda, başarısız da olmazsınız, öyle değil mi?
-
-Fakat kaçırdığınız bir nokta var; yapılması gereken bir işi yapmadığınız da, zaten başarısız olmuşsunuz demektir. Unutmayın, "biraz", "hiç"ten daha fazladır.
+# ÖRNEK MAKALE 6
 
 
-### 3. Sonuçlara mı odaklanıyorsunuz? Yoksa odaklanamıyor musunuz?
+Lorem Ipsum Nedir?
 
-Dikkatini toparlayamadığınız için işlerinizi erteliyor musunuz? Hedeflerinize odaklanın. İşinizi tamamladığınızda ki kazancınıza odaklanırsanız, dikkatinizi toparlamak konusunda daha az sıkıntı çekersiniz.
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-Günlük, haftalık, aylık hedeflerinizi netleştirin. Hedeflerinize ulaştığınızdaki kazanımlarınızı zihninizde canlandırın. Dikkatinizi işinize verin.
+Kod görünümü örneği;
 
-Bununla birlikte, sağlıklı beslenmenin, uykunun ve sporun dikkati toparlama üzerindeki etkisini gözden kaçırmayın.
+```bash
+$ composer update
+```
 
-
-### 4. Başlayın!
-
-Sihirli kelime: Başlamak. "Başlayın!" ile kastedilen herhangi bir motivasyon sağlamaya çalışmak değil sadece. Başlamak, Psikolog Bluma Zeigarnik'in deyişi ile kişide Zeigarnik Etkisi yaratıyor. Yani, herhangi bir işe başladığımızda, beynimiz onun tamamlanmasını istiyor. Tamamlayamayınca da huzursuzluk oluşuyor. Sıkıcı bulduğumuz filmleri sonuna kadar izleme isteğimizin kaynağı bu etki. Bu nedenle, yazacağınız raporun sadece başlığını bile atmanız, işi tamamlamanızda büyük etki sağlayacaktır.
-
-
-### 5. Günlük hedefler koyun ve kendinizi ödüllendirin.
-
-Her keyif verici aktivitemiz sırasında beynimizde, davranışın tekrarlanmasını sağlayan, dopamin salgılanır. Uzun bir işin sonunda alınan hazzın aksine, internette video izlemek ya da sosyal medyada takılmak beyinde kısa süreli dopamin salgılanmasını sağlar.
-
-Yani yapmanız gereken, günlük hedefler belirlemek ve hedeflerinizi gerçekleştirdiğinizde kendinizi ödüllendirmek. Bu sayede, yaptığınız işten keyif almaya, dopamin salgılamaya ve işi tekrarlamaya başlayacaksınız.
-
-
-### 6. Verimliliğinizi arttırmak için Pomodoro Tekniğini öğrenin.
-
-Pomodoro, Francesco Cirillo adlı bir İtalyan tarafından 1980'lerin sonunda geliştirilen bir teknik. Bu teknikte çalışma, zaman aralıklarına bölünmekte ve verimliliğin arttırılması amaçlanmaktadır. Yani, 25 dakika iş, 5 dakika mola ile zihin programlanmaya çalışılmaktadır.
-
-Günümüzde oldukça popüler olan bu teknik için telefonunuza uygulama indirebilir ya da internetten zaman takibinizi yapabilirsiniz.
-
-
-### 7. Hedeflerinize yakın çevrenizi dahil edin.
-
-Arkadaşlarınıza "Diyete Başladım" dedikten sonra, canınız ne kadar çekerse çeksin, onların gözü önünde, çikolata yiyemediğiniz gibi, hedeflerinizi yakın çevreniz ile paylaşmanız işinizi tamamlamanız için zorlayıcı bir faktör olacaktır.
-
-Dikkat edilmesi gereken bir nokta: Hedeflerimizi çevremiz ile paylaştığımızda, beynimiz hedefimizi gerçekleştirdiğimizi varsayabilmekte ve kaynaklarını başka yönlere çevirebilmektedir. Bu nedenle, hedeflerimizi paylaşırken heveslerinize değil, yapılması gereken zor işlere odaklanmak daha faydalı olacaktır.
-
-
-### 8. Son olarak, sadece yapın!
-
-Yapılması gereken bir işi tamamlamanın verdiği hazzı, hiç bir internet sitesi veya bilgisayar oyunu veremez. Bu nedenle, kısa süreli hazları boşverin, yapmanız gereken işleri sadece yapın!
-
-Kaynak:  [onedio.com](https://onedio.com/haber/8-maddede-erteleme-hastaligi-hakkinda-her-sey-493195)
-
-::Anonim|2018-08-31|Genel
+::Yazar adı buraya yazılacak|2018-08-31|Genel
