--- a/database/M0007.md
+++ b/database/M0007.md
@@ -1,44 +1,14 @@
-# Web Sitesine Markdown Editör Eklemek?
+# ÖRNEK MAKALE 7
 
-Sitemizi yaptık, işlem tamam...
 
-Makaleleri yazarken HTML etiketlerini yazmama hız ve kolaylık sağlayan markdown yazı biçimini kullanmayı tercih ettim. Aslında Markdown yazı biçimi ile gerçekten yazmak çok kolay.  Sonrasında yazma biçimlerini nasıldı diye düşünmek yerine bunun mutlaka bir cKeditör gibi bir editörü vardır, bunu da düşünen olmuştur dedim. 
+Lorem Ipsum Nedir?
 
-Ve uzunca bir araştırma yaptıktan sonra  [SimpleMDE Markdown Editor](https://simplemde.com/)  ' ü buldum. Buraya dikkat edin kısa bir araştırmadan sonra demiyorum. Uzunca.
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-Bu editör en çok kulldığımız düğmelerle dolu araç çubuğu, ekranı ikiye bölerek yazdığımız markdown kodlarının gerçekte neye dönüştüğünü anında görme ve bence en önemlisi tam ekran çalışabilme imkanı sağlamasıdır. Bunlar yeter daha ne isteyelim ki? Yapanların ellerine sağlık. Süper...
+Kod görünümü örneği;
 
-Şimdi gelelim editörü projemizin ilgili yerlerine/yerine eklemeye.
-
-### Simplemde Editör Adaptasyonu
-
-1. Sitemizin anasayfasında yer alan ```head ``` etiketi arasında yer alan bağlantı satırlarımızın en altına aşağıdaki ```CDN``` bağlantılarını ekliyoruz.
-
-```html
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+```bash
+$ composer update
 ```
 
-2. Yine anasayfamızın en alt satırlarında yer alan ```script``` bağlantılarımızın altına aşağıdaki bağlantı satırlarını ve script'i ekliyoruz.
-
-```html
-<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-<script>
-    	new SimpleMDE({
-    		element: document.getElementById("textareaID"),
-    		spellChecker: false,
-        toolbar: ["bold", "italic", "|", "strikethrough", 
-				"heading", "heading-smaller", 
-				"heading-bigger", "heading-1", 
-				"heading-2", "heading-3", "code", 
-				"quote", "unordered-list", "ordered-list", 
-				"clean-block", "link", "image", "table", 
-				"horizontal-rule", "preview", "side-by-side", 
-				"fullscreen", "guide"],
-    	});
-</script>
-```
-
-**Dikkat :** *Burada dikkat etmeniz gereken en önemli konu; textareaID yazılı olan yere kendi textarea nıza verdiğiniz id olması gerekmektedir.* Orijinal kodlarda tarifi var fakat toolbar satırıda yoktu. Onu da biz ekledik.
-
-::Hasan Çiçek|2018-09-01|Genel;Markdown
+::Yazar adı buraya yazılacak|2018-09-01|Genel;Markdown
