--- a/database/M0009.md
+++ b/database/M0009.md
@@ -1,27 +1,14 @@
-## PHP Nedir?
+# ÖRNEK MAKALE 9
 
-PHP (PHP: Hypertext Preprocessor) derlemeye gerek duyulmadan, geliştirme için tasarlanmış HTML içine gömülebilen bir betik dilidir.
 
-Php, "Ben kendime kişisel bir web sayfası yapsam nasıl olur." diye düşünüp kendi web sayfasını yaparken *Rasmus Lerdorf*  tarafından geliştirilmiştir.
+Lorem Ipsum Nedir?
 
-Php'nin ilk adı "*Personel hompage (Kişisel Anasayfa)*" dir. 1994 yılında denemeler yaptıktan sonra 1995 yılında php'nin ilk versiyonu çıkıyor. 8 Haziran 1995 yılında Rasmus Lerdorf "*Open Searce (Açık Kaynak)*" geliştirilmek üzere bir tartışma grubunda "*Personel Homepage Tools*" ismiyle duyurarak, gruba "*Ben bunu yaptım, alın geliştirin*" demiş.
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-Daha sonra; iki israilli programcı "*Zeev Suraski*" ve "*Andi Gutmans*" (*Zend teknolojilerinin kurucuları*) php'yi alıp zend çekirdeği ile yeniden yazıyorlar. Adınıda şimdiki **PHP (Hypertext Preprocessor)** olarak koymuşlardır.
+Kod görünümü örneği;
 
-**Tercih Edilme Sebepleri;**
+```bash
+$ composer update
+```
 
-- Nesne yönelimli bir dildir,
-- HTML kodları arasına kolayca gömülebilir,
-- Derlemeye gerek yoktur, direk yapılan görülebilir,
-- Sunucu masrafları uygundur,
-- Kolay öğrenilebilir ve bu sebeple kolay para kazanabilirsiniz.
-
-*İpucu: Php'nin resmi sitesi [php.net](https://www.php.net/)'dir.*
-
-**Doğru Editör Seçimi (IDE)**
-
-Başka editörler kullanırken PHP kodları için eklenti yüklemek gerekebilir ve gerekecektir. Eğer kullandığınız dile ait bir IDE varsa onu kullanmamız gerekir. Örneğin; Php için "*Phpstorm*" kullanmak gibi. Fakat biz sizlere [Atom](https://atom.io/) yada [SublimeText](https://www.sublimetext.com/) kullanmanızı öneriyoruz. Çünkü, kullanmanız için herhangi bir ücret ödemeniz gerekmiyor.
-
-Kaynak: Netten derleme...
-
-::Hasan Çiçek|2019-07-12|Php
+::Yazar adı buraya yazılacak|2019-07-12|Php
