--- a/database/M0003.md
+++ b/database/M0003.md
@@ -1,101 +1,14 @@
-# Linux Hakkında!
+# ÖRNEK MAKALE 3
 
 
-### İnceden Bilgiler
+Lorem Ipsum Nedir?
 
-* Linux işletim sisteminde `. (nokta)` ile başlayan dosyalar gizli dosyalardır.
-* `;`     Komutları soldan sağa doğru çalıştırır.
-* `||`    Doğru olan ilk komutla beraber işlemi keser.
-* `&&`    İlk hatalı kodda işlemi keser.
-* `&`     Komut sonuna konulursa arka planda çalışır.
-  - Örneğin; `firefox&` (Firefox arkaplanda çalışmaya devam eder.)
-* `>>`    Dosyanın en alt satırına çıktıyı yazar.
-* `<`    Sağdaki komut yada kaynağı soldakine gönderir.
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
 
-### Genel Komutlar
+Kod görünümü örneği;
 
-
-* Kullanıcıyı öğrenme;
 ```bash
-$ whoami
-```
-* Nerdeyim? Hangi klasördeyim?;
-```bash
-$ pwd
-```
-* Ana dizine gelmek;
-```bash
-$ cd
-```
-* İstenilen klasöre geçmek;
-```bash
-$ cd /klasorAdi
-```
-* Üst klasöre geçmek;
-```bash
-$ cd ..
-```
-* Dosya içeriğini konsolda görmek;
-```bash
-$ cat dosyaAdi
-```
-* Geçmişte kullandığımız komutları görmek;
-```bash
-$ history
-```
-* Geçmişte listelenen komutları çalıştırmak;
-```bash
-$ !komutunSiraNumarasi
-```
-* Son komutu çalıştırmak;
-```bash
-$ !!
-```
-* Geçmişte arama yapmak;
-```bash
-$ CTRL+R
-```
-* Klasör/dosyaları listelemek;
-
-  "Listelecağimiz klasör içerisinden gönderilir."
-
-  - -a Gisli dosyalarıda gösterir.
-  - -l Detaylı listeler.
-```bash
-$ ls -al
-```
-* Klasör oluşturma;
-```bash
-$ mkdir yeniKalsorAdi
-```
-* Dosya oluşturma;
-```bash
-$ touch yenidosyaAdi
-```
-* Klasör/dosya adı değiştirme;
-```bash
-$ mv degistirilecekDosyaAdi dosyaninYeniAdi
-```
-* Komutlar ve parametreleri hakkında hakkında konsoldan bilgi almak;
-```bash
-$ whereis komutAdi
-```
-```bash
-$ man komutAdi 
-```
-```bash 
-$ info komutAdi
-```
-* Klasör/dosya silme işlemi;
-```bash
-rm dosyaAdi/KlasorAdi
+$ composer update
 ```
 
-### İşe Yarar Komutlar
-
-* passwd dosyasının nerede olduğunu öğrenme;
-```bash
-$ whereis passwd
-```
-
-::Hasan Çiçek|2018-08-28|Shell;Php
+::Yazar adı buraya yazılacak|2018-08-28|Shell;Php
