--- a/database/M0005.md
+++ b/database/M0005.md
@@ -1,6 +1,14 @@
-# Terminoloji
-
-**Bash:** GNU işletim sisteminde kullanılan shell veya komut dili yorumlayıcısıdır. İsmi, Unix Shell’in (sh) yaratıcısı Stephen Bourne’a atfen Bourne-Again Shell (BASH) olarak belirlenmiştir.
+# ÖRNEK MAKALE 5
 
 
-::Hasan Çiçek|2018-08-28|Genel
+Lorem Ipsum Nedir?
+
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Kod görünümü örneği;
+
+```bash
+$ composer update
+```
+
+::Yazar adı buraya yazılacak|2018-08-28|Genel
