--- a/database/M0008.md
+++ b/database/M0008.md
@@ -1,13 +1,14 @@
-# 2017 LİNUX YAZ KAMPI EĞİTİM NOTLARI
+# ÖRNEK MAKALE 8
 
-### ÖRNEKLER
-Tabiki komutlar konsoldan çalıştırılacak!!!
+
+Lorem Ipsum Nedir?
+
+Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.
+
+Kod görünümü örneği;
+
 ```bash
-$ apt-get install git
-$ apt-get update
-$ apt-get upgrade
+$ composer update
 ```
 
-
-
-::Hasan Çiçek|2018-08-28|Linux
+::Yazar adı buraya yazılacak|2018-08-28|Linux
