Listeleme sayfasına yeni özellik eklendi.

--- a/database/M0004.md
+++ b/database/M0004.md
@@ -11,4 +11,4 @@ Kod görünümü örneği;
 $ composer update
 ```
 
-::Yazar adı buraya yazılacak|2018-08-28|Php
+::Yazar adı buraya yazılacak|2018-08-28|Php|0
